<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.ancely.fyw.login.views.StrakeOutEditText
        android:id="@+id/frag_login_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp"
        app:et_hint="@string/login_accound_hint"/>

    <com.ancely.fyw.login.views.StrakeOutEditText
        android:id="@+id/frag_login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:et_hint="@string/login_psw_hint"
        app:input_type="textPassword"/>

    <Button
        android:id="@+id/frag_login_login"
        style="@style/common_btn_background"
        android:layout_marginTop="30dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/frag_login_code_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/login_code_title"
            android:textColor="@color/color_333333"
            android:textSize="12sp"/>

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/jump_to_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/login_register_title"
            android:textColor="@color/color_333333"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>